# research-foundry

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  bundle-manifest.toml  foundry.yaml  pyproject.toml
.claude/: .skillmeat-deployed.toml  .skillmeat-project.toml  settings.json
.claude/agents/: content-curator.md  rf_claim_auditor.md  rf_deep_reader.md  rf_discovery_lead.md  rf_domain_researcher.md  rf_governance_officer.md  rf_intake_curator.md  rf_source_carder.md  rf_source_scout.md  rf_synthesizer.md
.claude/commands/: add-animation.md  autopilot.md
.claude/config/: INDEX.md  README.md  multi-model.toml
.claude/examples/: README.md  TEMPLATES.md
.claude/findings/: public-multiuser-release-activation-findings.md  runs-loopback-api-findings.md
.claude/hooks/: pre-compact-state.sh
.claude/plans/: tiered-workflow-overhaul.md
.claude/rules/: delegation-modes.md  git-workflow.md  lsp-diagnostics.md  progress-cli-only.md
.claude/scripts/: README.md  artifact-utils.sh  ci-utils.sh
.claude/specs/: README.md  changelog-spec.md  doc-policy-spec.md  multi-model-usage-spec.md  project-tracking-spec.md  provider-routing-spec.md  skills-index.md  subagent-nesting-spec.md  version-bump-spec.md
.codex/: hooks.json
.firecrawl/: arxiv.org-abs-2405.12484.md  arxiv.org-html-2409.00829v1.md  diglib.eg.org-items-f96dda09-9180-4777-a11e-774723b7d2c0.md  dl.acm.org-doi-fullHtml-10.1145-3424630.3425409.md  etsy-api-tou.md  etsy-ip.md  etsy-ratelimits.md  etsy-tou.md  fedreg-compendium.md  kluwer-tdm.md  lowlevelmesh.md  pplx-api-tos.md  qualcomm-adreno.md  whitecase-hiq.md
.skillmeat/: manifest.toml
backlog/: README.md  research_idea_backlog.yaml  seed_swarm_runs.sh
config/: claim_policy.yaml  governance.yaml  model_profiles.yaml  routing_rules.yaml  tools.yaml
examples/: run_demo.sh
intents/: intent.md
registries/: claim_index.yaml  report_index.yaml  run_index.yaml  skillbom_index.yaml  source_index.yaml
schemas/: arc_review_request.schema.yaml  assertion_evaluation.schema.yaml  assertion_lifecycle_event.schema.yaml  canonical_claim.schema.yaml  ccdash_event.schema.yaml  claim_ledger.schema.yaml  content_reuse_assessment.schema.yaml  evidence_bundle.schema.yaml  extraction_card.schema.yaml  foundry.schema.yaml  ibom.schema.yaml  inference_record.schema.yaml  intenttree_node.schema.yaml  intenttree_update.schema.yaml  meatywiki_writeback.schema.yaml  notebooklm_update.schema.yaml  passage.schema.yaml  permission_record.schema.yaml  raw_idea.schema.yaml  report_draft.schema.yaml  report_frontmatter.schema.yaml  research_brief.schema.yaml  research_evidence_plan.schema.yaml  research_idea_backlog.schema.yaml  research_intent.schema.yaml  review_packet.schema.yaml  rights_extension.schema.yaml  rights_failure.schema.yaml  rights_record.schema.yaml  routing_decision.schema.yaml  search_request.schema.yaml  search_run.schema.yaml  skillbom_candidate.schema.yaml  source_assertion.schema.yaml  source_card.schema.yaml  source_edition.schema.yaml  swarm_plan.schema.yaml  tool_profile.schema.yaml
scripts/: assertion_ledger_readiness.py  backfill_decision_record_writebacks.py  backfill_run_metadata.py  generate_openapi.py  rf-data
systemd/: rf-serve.service
templates/: ccdash_event.yaml  meatywiki_decision_record.md  meatywiki_source_note.md  raw_idea.md  report.md  research_brief.md  skillbom_candidate.md  source_card.md
tests/: __init__.py  conftest.py  test_adapters.py  test_approve_and_dispatch.py  test_arc_integration.py  test_auth_identity_api.py  test_backlog_reconcile.py  test_capture_triage.py  test_claim_verifier.py  test_cli_extract_fetch_resolution.py  test_cli_governance.py  test_cli_rights.py  test_composite_auth_chain.py  test_config_workspace_enforcement.py  test_contract_drift_rf_schema_version.py  test_council_verdict_normalization.py  test_decision_record_writeback.py  test_deployment_mode_cli_and_app.py  test_derivation_consistency.py  test_di1_gate_live_session_regression.py  test_end_to_end.py  test_governance_adversarial.py  test_governance_profiles.py  test_intake_intenttree.py  test_integrations.py  test_intenttree_writeback.py  test_litellm_complete_dark.py  test_litellm_complete_governance.py  test_litellm_forced_tool_call.py  test_litellm_plain_id_on_wire.py  test_no_derivation_guard.py  test_notebook_correlation.py  test_notebooklm_adapter.py  test_notebooklm_integration.py  test_notebooklm_writeback.py  test_openapi_seam.py  test_paths.py  test_pdf_extractor.py  test_pdf_fixture_suite.py  test_pdf_secret_scan_governance.py  (+51 more)
website/: README.md  mkdocs.yml
(+3098 files in other folders)
