[project]
name = "research-foundry"
version = "0.1.0"
description = "Markdown/YAML-first research control plane: turn raw ideas into governed research swarms, evidence bundles, and verifiable reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nick Miethe", email = "miethe.dev@gmail.com" }]
keywords = ["research", "agentic-os", "evidence-bundles", "claim-verification", "ccdash", "meatywiki", "skillbom"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "markdown-it-py>=3.0",
    "pyjwt[crypto]>=2.8",
    "cryptography>=43.0",
]

[project.optional-dependencies]
# External research tools are OPTIONAL. Adapters import them lazily and degrade
# to deterministic/offline behavior when they are not installed.
research = [
    "gpt-researcher>=0.8",
    "paper-qa>=5.0",
]
llm = [
    "claude-agent-sdk>=0.1",
    "litellm>=1.40",
]
search = ["httpx>=0.27"]
mcp = ["mcp>=1.0"]
# PDF text extraction is OPTIONAL. The extractor imports pypdf lazily and
# degrades to locator-only behavior when it is not installed.
pdf = ["pypdf>=3.0.0"]
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    # Required by fastapi/starlette TestClient (tests/test_serve_*.py); not a runtime dep.
    "httpx>=0.27",
]
docs = [
    "mkdocs-material",
    "pymdown-extensions",
]

[project.scripts]
rf = "research_foundry.cli:app"
# Search-router MCP server (stdio). Optional: requires the `mcp` extra
# (`pip install 'research-foundry[mcp]'` / `uv tool install --with mcp .`).
# Without it the entrypoint raises a clear RuntimeError pointing to the extra.
# Exposed over ssh-stdio by the launchpad's aos-mcp (AOS remote targeting).
rf-mcp = "research_foundry.services.search_router.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_foundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "integration: end-to-end pipeline tests that drive multiple services",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Typer's idiom places Option/Argument descriptors in parameter defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false
